Fix broken styles (#57)
* Fixed style issues

* Fix routing issues

--- a/web/src/components/common/Footer.scss
+++ b/web/src/components/common/Footer.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/@blueprintjs/core/lib/scss/variables';
+@import "../../../node_modules/@blueprintjs/core/lib/scss/variables";
 
 footer {
   width: 100%;
@@ -9,7 +9,8 @@ footer {
   color: $white;
   text-align: center;
 
-  a {
+  a,
+  button {
     color: $white !important;
   }
 
